Worked on Bintree visualization and static images

--- a/AV/Development/bintreeAV.html
+++ b/AV/Development/bintreeAV.html
@@ -11,6 +11,18 @@
       height: 480px;
     }
   </style>
+
+
+<script src="../../lib/jquery.min.js"></script>
+<script src="../../lib/jquery-ui.min.js"></script>
+<script src="../../JSAV/lib/jquery.transit.js"></script>
+<script src="../../JSAV/lib/raphael.js"></script>
+<script src="../../JSAV/build/JSAV-min.js"></script>
+<script src="../../lib/odsaUtils-min.js"></script>
+<script src="../../lib/odsaAV-min.js"></script>
+<script src="../sortUtils.js"></script>
+<script src="bintreeAV.js"></script>
+
 </head>
 
 
@@ -31,7 +43,7 @@
     </tr>
   </table>
 
-  <!-- <form id="ssperform">
+  <form id="ssperform">
     <p><label for="increments">Type an increment series or
                                use the given default:</label>
        <input id="increments" size="30" name="increments" type="text"
@@ -48,23 +60,13 @@
       <input size="60" name="arrayValues" id="arrayValues" type="text" 
          placeholder="Type space-separated values, or hit 'run' to use random values" />
     </p>
-  </form> -->
-  <div class="avcontainer">
+  </form>
+  <div class="av">
     <span class="jsavcounter"></span>
     <div class="jsavcontrols"></div>
     <p class="jsavoutput jsavline"></p>
-  </div> <!--avcontainer-->
+  </div> <!--av-->
 </div> <!--container-->
 
-<script src="../../lib/jquery.min.js"></script>
-<script src="../../lib/jquery-ui.min.js"></script>
-<script src="../../JSAV/lib/jquery.transit.js"></script>
-<script src="../../JSAV/lib/raphael.js"></script>
-<script src="../../JSAV/build/JSAV-min.js"></script>
-<script src="../../lib/odsaUtils-min.js"></script>
-<script src="../../lib/odsaAV-min.js"></script>
-<script src="../sortUtils.js"></script>
-<script src="bintreeCODE.js"></script>
-<script src="bintreeAV.js"></script>
 </body>
 </html>
