--- a/AV/Development/BufferPoolTestAV.html
+++ b/AV/Development/BufferPoolTestAV.html
@@ -19,7 +19,8 @@
     </table>
     <div class="avcontainer">
       <p class="jsavoutput jsavscroll"></p>
-      <ol id="hashTable"></ol>
+      <ol id="buffer_pool"></ol>
+      <ol id="memory"></ol>
     </div>
   </div>
         
@@ -37,7 +38,7 @@
 
         <!-- Amount of sector in main memory -->
         <select id="mainmemory_size">
-          <option selected="selected" value="0">Amount of Sectors</option>
+          <option selected="selected" value="0">Main Memory Size</option>
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -47,13 +48,6 @@
           <option value="7">7</option>
           <option value="8">8</option>
           <option value="9">9</option>
-          <option value="10">10</option>
-          <option value="11">11</option>
-          <option value="12">12</option>
-          <option value="13">13</option>
-          <option value="14">14</option>
-          <option value="15">15</option>
-          <option value="16">16</option>
         </select>
 
         <!-- Size of Buffer Pool -->
@@ -68,13 +62,6 @@
           <option value="7">7</option>
           <option value="8">8</option>
           <option value="9">9</option>
-          <option value="10">10</option>
-          <option value="11">11</option>
-          <option value="12">12</option>
-          <option value="13">13</option>
-          <option value="14">14</option>
-          <option value="15">15</option>
-          <option value="16">16</option>
         </select>
       </p>
       <p>
@@ -85,16 +72,6 @@
         <!-- Buttons -->
         <input type="button" id="next" name="next" value="Next" />
         <input type="button" id="reset" name="reset" value="Restart" />
-      <!-- Hidden controls -->
-        <select id="keyrange">
-          <option selected value="0">Key Range</option>
-          <option value="1">0 - 99</option>
-          <option value="2">0 - 999</option>
-        </select>
-        <span id="mValue">
-          <label>M-value:</label>
-          <input size="12" name="M" id="M" type="text" />
-        </span>
       </p>
     </form>
   </div>
@@ -105,6 +82,7 @@
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <script src="../../lib/odsaUtils-min.js"></script>
   <script src="../../lib/odsaAV-min.js"></script>
+  <script src="BufferPoolTestAV.js"></script>
 
 </body>
 </html>
