Working on developing Bintree visualization

--- a/AV/Development/bintreeAV.html
+++ b/AV/Development/bintreeAV.html
@@ -8,7 +8,12 @@
   <style>
     #container {
       width: 780px;
-      height: 480px;
+      height: 800px;
+    }
+
+    .avcontainer {
+      width: 700px;
+      height: 505px;
     }
   </style>
 </head>
