Moved label styling from proficiency.css to trie.css with other common styling used in Radix Trie and Digital Search Tree exercise.

--- a/AV/Development/digitalSearchTreePRO.html
+++ b/AV/Development/digitalSearchTreePRO.html
@@ -6,14 +6,7 @@
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <!-- <link rel="stylesheet" href="opendsaAV.css" type="text/css" /> -->
   <link rel="stylesheet" href="proficiency.css" type="text/css" />
-  <style>
-    .jsavtreenode {
-      cursor: pointer;
-    }
-    .jsavstack {
-      margin-top: 30px;
-    }
-  </style>
+  <link rel="stylesheet" href="trie.css" type="text/css" />
 </head>
 
 <body>
