--- a/AV/Development/radixTriePRO.html
+++ b/AV/Development/radixTriePRO.html
@@ -1,38 +1,31 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-        <title>Radix Trie</title>
-        <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-        <!-- <link rel="stylesheet" href="opendsaAV.css" type="text/css" /> -->
-        <link rel="stylesheet" href="proficiency.css" type="text/css" />
-        <style>
-          .jsavtreenode {
-            cursor: pointer;
-          }
-          .jsavstack {
-            margin-top: 30px;
-          }
-        </style>
-    </head>
+<head>
+  <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+  <title>Radix Trie</title>
+  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <!-- <link rel="stylesheet" href="opendsaAV.css" type="text/css" /> -->
+  <link rel="stylesheet" href="proficiency.css" type="text/css" />
+  <link rel="stylesheet" href="trie.css" type="text/css" />
+</head>
 
-    <body>
-        <h1>Radix Trie</h1>
-        <div id="jsavcontainer">
-            <p class="instructLabel">Instructions:</p>
-            <p class="instructions">
-                    Use the values in the stack to form a radix trie.
-            </p>
-            <p align="center" class="jsavexercisecontrols"></p>
-        </div>
+<body>
+  <h1>Radix Trie</h1>
+  <div id="jsavcontainer">
+    <p class="instructLabel">Instructions:</p>
+    <p class="instructions">
+        Use the values in the stack to form a radix trie.
+    </p>
+    <p align="center" class="jsavexercisecontrols"></p>
+  </div>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-        <script src="../../JSAV/lib/jquery.transit.js"></script>
-        <script src="../../JSAV/lib/raphael.js"></script>
-        <script src="../../JSAV/build/JSAV.js"></script>
-        <script src="../../JSAV/extras/stack.js"></script>
-        <script src="ClickHandler.js"></script>
-        <script src="radixTriePRO.js"></script>
-    </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+  <script src="../../JSAV/lib/jquery.transit.js"></script>
+  <script src="../../JSAV/lib/raphael.js"></script>
+  <script src="../../JSAV/build/JSAV.js"></script>
+  <script src="../../JSAV/extras/stack.js"></script>
+  <script src="ClickHandler.js"></script>
+  <script src="radixTriePRO.js"></script>
+</body>
 </html>
