Tune tree heights -- cleanup from JSAV changes

--- a/AV/Development/BST-delete-proficiency.html
+++ b/AV/Development/BST-delete-proficiency.html
@@ -14,8 +14,14 @@
       cursor: default;
     }
     .jsavstacknode {
-       font-size: 1.5em;
-     }
+      font-size: 1.5em;
+    }
+    .jsavtree {
+      top: 20px;
+    }
+    .jsavcontainer {
+      height: 580px;
+    }
   </style>
 </head>
 
