--- a/AV/Development/BST-insert-proficiency.html
+++ b/AV/Development/BST-insert-proficiency.html
@@ -7,11 +7,14 @@
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
   <link rel="stylesheet" href="proficiency.css" type="text/css" />
   <style>
-    .jsavtreenode {
-    cursor: pointer;
+    .jsavtreenode 
+      cursor: pointer;
     }
     .jsavstacknode {
-    font-size: 1.5em;
+      font-size: 1.5em;
+    }
+    .jsavtree {
+      top: 20px;
     }
   </style>
 </head>
