Tested language changing with Binary Search exercise.

--- a/AV/Development/binarySearchPRO.html
+++ b/AV/Development/binarySearchPRO.html
@@ -18,8 +18,8 @@
 </head>
 
 <body>
-  <h1>Binary Search</h1>
   <div id="jsavcontainer">
+    <h1 class="title">Binary Search</h1>
     <p class="instructLabel">Instructions:</p>
     <p class="instructions">
         Find the key given in the exercise by highlighting the <strong>mid points</strong> used in Binary Search. The values are hidden and in <strong>ascending order</strong>.
@@ -32,6 +32,8 @@
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
   <script src="../../JSAV/build/JSAV.js"></script>
+  <script src="../../lib/odsaAV.js"></script>
+  <script src="language.js"></script>
   <script src="binarySearchPRO.js"></script>
 </body>
 </html>
