Did some refactoring on binarySearchPRO exercise.

--- a/AV/Development/binarySearchPRO.html
+++ b/AV/Development/binarySearchPRO.html
@@ -19,11 +19,9 @@
 
 <body>
   <div id="jsavcontainer">
-    <h1 class="title">Binary Search</h1>
-    <p class="instructLabel">Instructions:</p>
-    <p class="instructions">
-        Find the key given in the exercise by highlighting the <strong>mid points</strong> used in Binary Search. The values are hidden and in <strong>ascending order</strong>.
-    </p>
+    <h1 class="title"></h1>
+    <p class="instructLabel"></p>
+    <p class="instructions"></p>
     <p align="center" class="jsavexercisecontrols"></p>
   </div>
 
