Created function to set title and instructions in the selected language

--- a/AV/Development/binarySearchPRO.html
+++ b/AV/Development/binarySearchPRO.html
@@ -19,9 +19,9 @@
 
 <body>
   <div id="jsavcontainer">
-    <h1 class="title"></h1>
-    <p class="instructLabel"></p>
-    <p class="instructions"></p>
+    <h1 class="ODSAtitle"></h1>
+    <p class="ODSAinstructlabel"></p>
+    <p class="ODSAinstructions"></p>
     <p align="center" class="jsavexercisecontrols"></p>
   </div>
 
