--- a/AV/Development/postfixEvaluationPRO.html
+++ b/AV/Development/postfixEvaluationPRO.html
@@ -14,12 +14,10 @@
 </head>
 
 <body>
-  <h1>Evaluating Postfix Expression</h1>
   <div id="jsavcontainer">
-    <p class="instructLabel">Instructions:</p>
-    <p class="instructions">
-      Evaluate the postfix expression. You can performe an operation on the two topmost values in a stack by moving an operator into the evaluator.
-    </p>
+    <h1 class="ODSAtitle"></h1>
+    <p class="ODSAinstructlabel"></p>
+    <p class="ODSAinstructions"></p>
     <p align="center" class="jsavexercisecontrols"></p>
     <p class="jsavscore"></p>
   </div>
@@ -29,7 +27,9 @@
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
   <script src="../../JSAV/build/JSAV.js"></script>
+  <script src="../../lib/odsaAV.js"></script>
   <script src="ClickHandler.js"></script>
+  <script src="language.js"></script>
   <script src="postfixEvaluationPRO.js"></script>
 </body>
 </html>
