removed seamless attribute from iframe

--- a/AV/Development/conceptMap.html
+++ b/AV/Development/conceptMap.html
@@ -18,14 +18,13 @@
 </p>
 
 <div class="avcontainer">
-    <span class="jsavcounter"></span>
     <ul>
     <li><a href="canary.html" target="description">canary <a></li>
     <li><a href="robin.html" target="description"> robin <a></li>
     <li><a href="cardinal.html" target="description"> cardinal <a></li>
     </ul>
 
-    <div><iframe seamless name="description"></iframe></div>
+    <div><iframe name="description"></iframe></div>
 
 </div>
 
