Changes css style to make it easier to see

--- a/AV/Development/ArrayTree.html
+++ b/AV/Development/ArrayTree.html
@@ -12,8 +12,9 @@
 <body>
 <!-- Main Container -->
 <style>
-    #arrayTree, #arrayTree .jsavoutput {
+    #arrayTree {
         width: 800px;
+        margin: 0 auto;
     }
 
     #arrayTree .jsavcanvas {
