Changed classes used by setTitleAndInstructions to exerciseTitle, instructLabel and instructions

--- a/AV/Development/binarySearchPRO.html
+++ b/AV/Development/binarySearchPRO.html
@@ -19,9 +19,9 @@
 
 <body>
   <div id="jsavcontainer">
-    <h1 class="ODSAtitle"></h1>
-    <p class="ODSAinstructlabel"></p>
-    <p class="ODSAinstructions"></p>
+    <h1 class="exerciseTitle"></h1>
+    <p class="instructLabel"></p>
+    <p class="instructions"></p>
     <p align="center" class="jsavexercisecontrols"></p>
   </div>
 
@@ -30,6 +30,7 @@
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
   <script src="../../JSAV/build/JSAV.js"></script>
+  <script src="../../lib/odsaUtils.js"></script>
   <script src="../../lib/odsaAV.js"></script>
   <script src="language.js"></script>
   <script src="binarySearchPRO.js"></script>
