Modified template to add space between bug report, register and login links.

--- a/RST/source/_themes/haiku/layout.html
+++ b/RST/source/_themes/haiku/layout.html
@@ -31,8 +31,8 @@
 {% endmacro %}
 
 {% macro login() %}
-<a id="username-link" style="float:right;color:red;margin:10px 0 auto; display: none" class="username-link" href="Gradebook.html"></a>
-<a id="login-link" style="float:right;color:red;margin:10px 10px auto" class="login-link" href="#">Login</a>
+<a id="username-link" style="float:right;color:red;margin:10px 20px auto; display: none" class="username-link" href="Gradebook.html"></a>
+<a id="login-link" style="float:right;color:red;margin:10px 20px auto" class="login-link" href="#">Login</a>
 <div id="login-box" class="login-popup">
   <a href="#" class="close"><img src="_static/Images/close_pop.png" class="btn_close" title="Close Window" alt="Close" /></a>
   <form method="post" class="signin" action="#">
@@ -59,7 +59,7 @@
 {% endmacro %}
 
 {% macro registration() %}
-<a id="registration-link" style="float:right;color:red;margin:10px 10px auto" class="registration-link" href="#">Register</a>
+<a id="registration-link" style="float:right;color:red;margin:10px 20px auto" class="registration-link" href="#">Register</a>
 <div id="registration-box" class="registration-popup ">
   <a href="#" class="close"><img src="_static/Images/close_pop.png" class="btn_close" title="Close Window" alt="Close" /></a>
   <form method="post" class="signin" action="#">
@@ -94,7 +94,7 @@
 {% endmacro %}
 
 {% macro bugreport() %}
-<a id="bugreport-link" style="float:right;color:red;margin:10px 10px auto" class="bugreport-link" href="#">Bug Report/Feedback</a>
+<a id="bugreport-link" style="float:right;color:red;margin:10px 20px auto" class="bugreport-link" href="#">Report a bug</a>
 <div id="bugreport-box" class="bugreport-popup ">
   <a href="#" class="close"><img src="_static/Images/close_pop.png" class="btn_close" title="Close Window" alt="Close" /></a>
   <form method="post" class="report" action="#">
