added reset button, got rid of bugs, fixed issues with requesting sectors already in buffer pool when buffer pool is not full

--- a/AV/Development/BufferPoolTestAV.html
+++ b/AV/Development/BufferPoolTestAV.html
@@ -21,6 +21,11 @@
     
     <div class="avcontainer">
       <p class="jsavoutput jsavscroll"></p>
+      <div class="jsavcanvas"></div>
+    </div>
+
+    <div class="av" id = "temp">
+      <div class="jsavcanvas"></div>
     </div>
 
   </div>
@@ -66,7 +71,8 @@
           <option value="8">8</option>
           <option value="9">9</option>
         </select>
-
+      </p>
+      <p>
         <!-- Input Text Field -->
         <label for="input">Input:</label>
         <input size="10" name="input" id="input" type="text" />
