forget to add to previous commit

--- a/RST/_themes/haiku/layout.html
+++ b/RST/_themes/haiku/layout.html
@@ -116,7 +116,7 @@
 
       <label class="description">
         <span>Description*:</span><br>
-        <textarea id="b_derscription" rows="5" cols="25" placeholder="***BUG** Please enter: (1) a consice description of the problem. (2) steps to reproduce bug"></textarea>
+        <textarea id="b_description" rows="5" cols="25" placeholder="***BUG** Please enter: (1) a consice description of the problem. (2) steps to reproduce bug"></textarea>
       </label>
 
       <label class="screenshot">
