--- a/AV/Development/BST-delete.html
+++ b/AV/Development/BST-delete.html
@@ -52,7 +52,7 @@
 
     // Main program inserts 10 random values into the tree
     var jsav = new JSAV("av-d");
-    var bt = jsav.ds.bintree();
+    var bt = jsav.ds.binarytree();
     var caption_label = jsav.label("BST insert", {before: bt});
     var caption_text = "";
 
