--- a/AV/Development/BST-test.html
+++ b/AV/Development/BST-test.html
@@ -27,7 +27,7 @@
 
 <script>
   var jsav = new JSAV("av");
-  var bt = jsav.ds.bintree();
+  var bt = jsav.ds.binarytree();
 
   bt.root(37);
   var rt = bt.root();
