--- a/AV/Development/autonodes.html
+++ b/AV/Development/autonodes.html
@@ -22,7 +22,7 @@
     <script src="../JSAV/build/JSAV-min.js"></script>
     <script>
     var jsav = new JSAV("av");
-    var bt = jsav.ds.bintree();
+    var bt = jsav.ds.binarytree();
     bt.root("internallongvalueki"); // set the value of the root
     
     bt.root().highlight(); //highlight root
