--- a/AV/Development/kd-interact.html
+++ b/AV/Development/kd-interact.html
@@ -214,7 +214,7 @@
   
     // Main program 
     var jsav = new JSAV("av");
-    var bt = jsav.ds.bintree({center:false});
+    var bt = jsav.ds.binarytree({center:false});
     
     var caption_label = jsav.label("K-D tree insert: Click on the map area to insert points...",{before:bt});
     var caption_text = "";
