--- a/AV/Development/kd-treeAV.html
+++ b/AV/Development/kd-treeAV.html
@@ -210,7 +210,7 @@
    // var jcan = document.getElementById("can");
     
     var jsav = new JSAV("av");
-    var bt = jsav.ds.bintree({center:false});
+    var bt = jsav.ds.binarytree({center:false});
     var caption_label = jsav.label("kd-tree insert", {before: bt});
     var caption_text = "";
     //var lines = jsav.g.set();       // Set of split lines to be displayed
