--- a/AV/Development/smallnodes.html
+++ b/AV/Development/smallnodes.html
@@ -23,7 +23,7 @@
     <script src="http://algoviz.org/OpenDSA/dev/OpenDSA/JSAV//build/JSAV.js"></script>
     <script>
     var jsav = new JSAV("av");
-    var bt = jsav.ds.bintree({center: false});
+    var bt = jsav.ds.binarytree({center: false});
     bt.root(""); // set the value of the root
     
     bt.root().highlight(); //highlight root
