--- a/AV/Sorting/mergesortPRO.html
+++ b/AV/Sorting/mergesortPRO.html
@@ -26,19 +26,8 @@
   </table>
 
   <form class="avcontainer">
-    <p class="instructLabel">Instructions:</p>
-    <p class="instructions">
-      Start at the bottom left.  Merge two single element arrays to
-      sort a sorted two-element array.  Continue merging until you
-      reach an array whose child arrays have not BOTH been sorted.
-      Return to single element arrays and repeat the merging process
-      as necessary until all elements have been merged into a single,
-      sorted array.  To merge an element into another array, click the
-      element to select it, then click the position where it should be
-      in the sorted, merged array.  Remember, the order in which
-      blocks are merged matters so be sure to select the smallest
-      blocks first, starting at the left.
-    </p>
+    <p class="instructLabel"></p>
+    <p class="instructions"></p>
     <p><span class="jsavscore"></span></p>
     <div id="arrays" class="jsavcanvas"></div>
   </form>
@@ -50,6 +39,7 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
+<script src="../Development/language.js"></script>
 <script src="mergesortPRO.js"></script>
 </body>
 </html>
