Refactored insertion sort exercise heavily. Code no longer hard coded, support for localization.

--- a/AV/Development/insertionSortWithoutSwapPRO.html
+++ b/AV/Development/insertionSortWithoutSwapPRO.html
@@ -4,23 +4,16 @@
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <title>Insertion Sort</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <!-- <link rel="stylesheet" href="opendsaAV.css" type="text/css" /> -->
+  <!-- <link rel="stylesheet" href="../../lib/odsaAV.css" type="text/css" /> -->
   <link rel="stylesheet" href="proficiency.css" type="text/css" />
-  <style>
-    #jsavcontainer {
-      height: 650px;
-    }
-  </style>
 </head>
 
 <body>
 
-  <h1>Insertion Sort</h1>
   <div id="jsavcontainer">
-    <p class="instructLabel">Instructions:</p>
-    <p class="instructions">
-      Use Insertion Sort to sort the table given below in ascending order. Click on an item to select it and copy its value to another position by clicking again.
-    </p>
+    <h1 class="exerciseTitle"></h1>
+    <p class="instructLabel"></p>
+    <p class="instructions"></p>
     <p align="center" class="jsavexercisecontrols"></p>
     <p class="jsavscore"></p>
   </div>
@@ -30,6 +23,8 @@
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
   <script src="../../JSAV/build/JSAV.js"></script>
+  <script src="../../lib/odsaUtils.js"></script>
+  <script src="../../lib/odsaAV.js"></script>
   <script src="ClickHandler.js"></script>
   <script src="insertionSortWithoutSwapPRO.js"></script>
 </body>
