--- a/AV/Development/conceptMap.html
+++ b/AV/Development/conceptMap.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html> 
 
@@ -15,6 +14,7 @@
 <body>
 <p>
       <input type="button" id="runit" name="runit" value="Run" />
+      <input type="button" id="run" name="run" value="JSON RUN" />
 </p>
 
 <div class="avcontainer">
@@ -24,19 +24,22 @@
     <li><a href="cardinal.html" target="description"> cardinal <a></li>
     </ul>
 
-    <div><iframe name="description"></iframe></div>
-
+ <!--   <div><iframe srcdoc="<p>Hello world!</p>"> </iframe></div> -->
+    <iframe srcdoc="<p>Hello world!</p>"></iframe>
 </div>
 
 
 
 </body>
 <script src="../../lib/jquery.min.js"></script>
-	<script src="../../lib/jquery-ui.min.js"></script>
-	<script src="../../JSAV/lib/jquery.transit.js"></script>
-	<script src="../../JSAV/lib/raphael.js"></script>
-	<script src="../../JSAV/build/JSAV-min.js"></script>
-	<script src="../../lib/odsaUtils.js"></script>
-	<script src="../../lib/odsaAV.js"></script>
-	<script src="conceptMap.js"></script>
+  <script src="../../lib/jquery-ui.min.js"></script>
+  <script src="../../JSAV/lib/jquery.transit.js"></script>
+  <script src="../../JSAV/lib/raphael.js"></script>
+  <script src="../../JSAV/build/JSAV-min.js"></script>
+  <script src="../../lib/odsaUtils.js"></script>
+  <script src="../../lib/odsaAV.js"></script>
+  <script src="../../lib/jquery.xml2json.js"></script>
+ <!-- <script src="testArray.js"></script> -->
+  <script src="conceptMap.js"></script>
 </html> 
+
