added a comment - last push merged master to my master and the pushed all changes -- weird behavior. Hopefully this wil just push the one comment change

--- a/AV/Development/poster.html
+++ b/AV/Development/poster.html
@@ -31,7 +31,7 @@ function runit() {
  // b = g.addNode("B", {"left": 25});
  // c = g.addNode("C", {"left": 25, "top": 300});
  // d = g.addNode("D", {"left":225, "top": 300});
-  
+  //add comment to see if commit and push goes hay wire again
 
   g.addEdge(b, a,{"weight": "Problems"});
   g.addEdge(a, c, {"weight": "Algorithms"});
